maint - fix css on article & profile pages

--- a/public/index.html
+++ b/public/index.html
@@ -57,5 +57,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer class="footer mt-auto bg-dark">
+        <p class="m-0 text-center text-white">Copyright AlbaDev 2025
+            <a class="github-logo" target="_blank" href="https://github.com/AlbaXIII" aria-label="developer github user profile"><i class="fab fa-github"></i></a>
+        </p>
+    </footer>
   </body>
 </html>
